--- a/src/main/resources/templates/cadastro/telefones.html
+++ b/src/main/resources/templates/cadastro/telefones.html
@@ -74,21 +74,28 @@
 	<h5>Cadastro de Telefones</h5>
 	<br />
 
+	<br />
+	<div th:each="m : ${msg}">
+		<span th:text="${m}"> </span>
+	</div>
+	<br />
+
 
 
 	<div class="row">
-		<form class="col s12" th:action="@{/addfonePessoa/{pessoaid}(pessoaid=${pessoaobj.id})}" method="POST">
+		<form class="col s12" th:action="@{/addfonePessoa/{pessoaid}(pessoaid=${pessoaobj.id})}" method="POST"
+			onsubmit="return validarCampos()?true : false">
 			<div class="row">
 				<div class="input-field col s6">
 
 					<label for="numero" class="active">Número</label>
-					<input name="numero" id="numero" class="validate" required="required">
+					<input name="numero" id="numero" class="validate">
 
 				</div>
 				<div class="input-field col s6">
 
 					<label for="tipo" class="active">Tipo</label>
-					<input name="tipo" id="tipo" class="validate" required="required">
+					<input name="tipo" id="tipo" class="validate">
 
 				</div>
 
@@ -142,6 +149,27 @@
 	</div>
 
 
+
+	<script type="text/javascript">
+		function validarCampos() {
+
+			numero = document.getElementById('numero').value;
+			numero = document.getElementById('tipo').value;
+
+			if (numero === '') {
+				alert('Numero deve ser informado');
+				return false;
+			}
+			else if (tipo === '') {
+				alert('Tipo deve ser informado');
+				return false;
+			}
+
+
+			return true;
+
+		}	
+	</script>
 
 
 </body>
